--- a/app.css
+++ b/app.css
@@ -28,10 +28,11 @@ body >div >div {
 
 h3 {
     font-size: 30px;
-    padding-top: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     text-align: center;
     margin: 0 auto;
-    color: #0C0C0C;
+    color: #F1F1F1;
 }
 
 .first {
@@ -44,4 +45,16 @@ h3 {
 
 .third {
     background-color: #38D14E;
+}
+
+.codin {
+    opacity: 0;
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+    border: 2px solid white;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+    -moz-box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 8px 6px -6px black;
 }
