--- a/app.css
+++ b/app.css
@@ -5,7 +5,6 @@
 }
 
 
-
 body {
     margin: 0;
     padding: 0;
@@ -19,7 +18,8 @@ body >div >div {
     height: 800px;
 }
 
-h3 {
+.name {
+    width: 100%;
     font-size: 30px;
     padding-top: 50px;
     padding-bottom: 50px;
