--- a/styles/app.css
+++ b/styles/app.css
@@ -5,17 +5,21 @@
 }
 
 
-body {
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 }
 
-body >div >div {
-
+section {
+    position: relative;
+    overflow: hidden;
+    padding: 50px;
     width: 100%;
-    height: 800px;
+    height: 100%;
+    background: #1abc9c;
 }
 
 .name {
