--- a/styles/app.css
+++ b/styles/app.css
@@ -44,13 +44,13 @@ section {
     background-color: #38D14E;
 }
 
-.codin {
+.profilePic {
     opacity: 0;
     display: block;
     width: 60%;
     margin: 0 auto;
     border: 2px solid white;
-    border-radius: 10px;
+    border-radius: 50%;
     -webkit-box-shadow: 0 8px 6px -6px black;
     -moz-box-shadow: 0 8px 6px -6px black;
     box-shadow: 0 8px 6px -6px black;
