--- a/styles/app.css
+++ b/styles/app.css
@@ -19,12 +19,12 @@ section {
     padding: 50px;
     width: 100%;
     height: 100%;
-    background: #1abc9c;
 }
 
 .bio {
     padding-top: 50px;
     opacity: 0;
+    padding-bottom: 50px;
 }
 
 .name {
@@ -34,25 +34,11 @@ section {
     padding-bottom: 10px;
     text-align: center;
     margin: 0 auto;
-    color: #F1F1F1;
 }
 
 .description {
     font-size: 20px;
     text-align: center;
-    color: #F1F1F1;
-}
-
-.first {
-    background-color: #4190EE;
-}
-
-.second {
-    background-color: #DB2931;
-}
-
-.third {
-    background-color: #38D14E;
 }
 
 .profilePic {
