--- a/styles/app.css
+++ b/styles/app.css
@@ -16,7 +16,6 @@ html, body {
 section {
     position: relative;
     overflow: hidden;
-    padding: 50px;
     width: 100%;
     height: 100%;
 }
@@ -39,6 +38,27 @@ section {
 .description {
     font-size: 20px;
     text-align: center;
+    padding-bottom: 10px;
+}
+
+.links {
+    padding: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.hdivider {
+    display: inline-block;
+    margin: 0 auto;
+    width: 1px;
+    height: 58px;
+    background-color: #AAA;
+}
+
+.profileLink {
+    display: inline-block;
+    margin: 0px;
+    padding: 10px;
 }
 
 .profilePic {
