--- a/styles/app.css
+++ b/styles/app.css
@@ -61,6 +61,10 @@ section {
     padding: 10px;
 }
 
+.profileContainer {
+    padding-top: 50px;
+}
+
 .profilePic {
     display: block;
     width: 300px;
@@ -70,6 +74,7 @@ section {
     -webkit-box-shadow: 0 8px 6px -6px black;
     -moz-box-shadow: 0 8px 6px -6px black;
     box-shadow: 0 8px 6px -6px black;
+    padding-top: 0px;
 }
 
 @media only screen
@@ -79,7 +84,7 @@ and (max-device-width : 480px) {
         font-size: 100px;
     }
 
-    .codin {
+    .profilePic {
         width: 80%;
         border: 1px solid white;
     }
