--- a/styles/app.css
+++ b/styles/app.css
@@ -74,3 +74,9 @@ section {
     box-shadow: 0 8px 6px -6px black;
     padding-top: 0px;
 }
+
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+    font-size: x-large;
+}
