--- a/styles/app.css
+++ b/styles/app.css
@@ -78,5 +78,5 @@ section {
 @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
-    font-size: x-large;
+    font-size: medium;
 }
