wait for assets to load before animation

--- a/styles/app.css
+++ b/styles/app.css
@@ -82,11 +82,9 @@ section {
     background: linear-gradient(#E0FFFF, #FFFFFF); 
 }
 
-{
-  
-}
 .profilePic {
     display: block;
+    opacity: 0;
     width: 25em;
     margin: 0 auto;
     border: 2px solid white;
@@ -95,10 +93,4 @@ section {
     -moz-box-shadow: 0 8px 6px -6px black;
     box-shadow: 0 8px 6px -6px black;
     padding-top: 0px;
-}
-
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-    font-size: medium;
 }
