--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,13 +4,27 @@
     box-sizing: border-box;
 }
 
+nav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
 
-html, body {
+nav a {
+	display: block;
+}
+
+html body {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     background-color: #FFFFFF;
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(#E0FFFF), to(#FFFFFF));
+    background: -webkit-linear-gradient(#E0FFFF, #FFFFFF);
+    background: -moz-linear-gradient(#E0FFFF, #FFFFFF);
+    background: -o-linear-gradient(#E0FFFF, #FFFFFF);
+    background: linear-gradient(#E0FFFF, #FFFFFF); 
 }
 
 section {
@@ -82,17 +96,13 @@ section {
 
 .profileContainer {
     padding: 3em; /* For Safari 5.1 to 6.0 */
-    background: -webkit-gradient(linear, 0 0, 0 100%, from(#E0FFFF), to(#FFFFFF));
-    background: -webkit-linear-gradient(#E0FFFF, #FFFFFF);
-    background: -moz-linear-gradient(#E0FFFF, #FFFFFF);
-    background: -o-linear-gradient(#E0FFFF, #FFFFFF);
-    background: linear-gradient(#E0FFFF, #FFFFFF); 
 }
 
 .profilePic {
     display: block;
     opacity: 0;
-    width: 25em;
+	width: 100%;
+    max-width: 25em;
     margin: 0 auto;
     border: 2px solid white;
     border-radius: 50%;
